--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Hello Coders!
+description: Creado en un curso de la Escuela de Programación y Pensamiento Recursivo
